# lightvm

./: .coderabbit.yml  .gitattributes  .gitignore  .lintstagedrc.js  .npmignore  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS.md  Cargo.toml  README.md  SECURITY.md  bindings  build-script.js  commitlint.config.js  cspell.config.js  esbuild.config.js  eslint.config.js  fix-imports.js  lightvm-0.1.0-notable.tgz  lightvm-0.1.0-proto.0.tgz  package-lock.json  package.json  release-please-config.json  solas.toml  synclean.toml  ts-bench.js  tsconfig.docs.json  tsconfig.json  unitry.config.js  vercel.json  vitest.config.ts
rust/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  synclean.toml
rust/.cargo/: config.toml
rust/benches/: add_bench.rs  assign_bench.rs  concat_bench.rs  dead_code_bench.rs  io_bench.rs
rust/benches/normal/: add_bench.rs  assign_bench.rs  concat_bench.rs  dead_code_bench.rs  io_bench.rs
rust/benches/optimize/: assign_bench.rs  dead_code_bench.rs
rust/bindings/: Instructions.ts  Value.ts
rust/src/: lib.rs  vm.rs
rust/src/instructions/: mod.rs
rust/src/instructions/collections/: access_func.rs  access_index_func.rs  make_array_func.rs  make_obj_func.rs  mod.rs  set_prop_func.rs  shrink_func.rs
rust/src/instructions/comparison/: eq_func.rs  ge_func.rs  gt_func.rs  le_func.rs  lt_func.rs  mod.rs  neq_func.rs
rust/src/instructions/comparison/eq/: eq_f16in.rs  eq_f32in.rs  eq_f64in.rs  eq_i16in.rs  eq_i32in.rs  eq_i64in.rs  mod.rs
rust/src/instructions/comparison/ge/: ge_f16in.rs  ge_f32in.rs  ge_f64in.rs  ge_i16in.rs  ge_i32in.rs  ge_i64in.rs  mod.rs
rust/src/instructions/comparison/gt/: gt_f16in.rs  gt_f32in.rs  gt_f64in.rs  gt_i16in.rs  gt_i32in.rs  gt_i64in.rs  mod.rs
rust/src/instructions/comparison/le/: le_f16in.rs  le_f32in.rs  le_f64in.rs  le_i16in.rs  le_i32in.rs  le_i64in.rs  mod.rs
rust/src/instructions/comparison/lt/: lt_f16in.rs  lt_f32in.rs  lt_f64in.rs  lt_i16in.rs  lt_i32in.rs  lt_i64in.rs  mod.rs
rust/src/instructions/control_flow/: break_func.rs  call_func.rs  if_false_func.rs  instantiate_func.rs  jump_func.rs  mod.rs  return_func.rs  stop_func.rs
rust/src/instructions/conversion/: mod.rs  to_double_func.rs  to_float_func.rs  to_half_func.rs  to_integer_func.rs  to_long_func.rs  to_octa_func.rs  to_short_func.rs  to_string_func.rs
rust/src/instructions/io/: clear_screen_func.rs  inspect_arr_func.rs  inspect_obj_func.rs  mod.rs  print.rs  print_func.rs  println.rs  println_func.rs  stdin_func.rs  stdout_func.rs
rust/src/instructions/logic/: and_func.rs  mod.rs  not_func.rs  or_func.rs  xor_func.rs
rust/src/instructions/math/: add_func.rs  cos_func.rs  div_func.rs  inc_dec.rs  mod.rs  mod_func.rs  mul_func.rs  neg_func.rs  pow_func.rs  powf_func.rs  powi_func.rs  rol_func.rs  ror_func.rs  shl_func.rs  shr_func.rs  sin_func.rs  sub_func.rs  tan_func.rs
rust/src/instructions/math/add/: add_f16in.rs  add_f32in.rs  add_f64in.rs  add_i128in.rs  add_i16in.rs  add_i32in.rs  add_i64in.rs  mod.rs
rust/src/instructions/math/cos/: cos_f16in.rs  cos_f32in.rs  cos_f64in.rs  mod.rs
rust/src/instructions/math/div/: div_f16in.rs  div_f32in.rs  div_f64in.rs  div_i128in.rs  div_i16in.rs  div_i32in.rs  div_i64in.rs  mod.rs
rust/src/instructions/math/mod/: mod.rs  mod_f16in.rs  mod_f32in.rs  mod_f64in.rs  mod_i128in.rs  mod_i16in.rs  mod_i32in.rs  mod_i64in.rs
rust/src/instructions/math/mul/: mod.rs  mul_f16in.rs  mul_f32in.rs  mul_f64in.rs  mul_i128in.rs  mul_i16in.rs  mul_i32in.rs  mul_i64in.rs
rust/src/instructions/math/neg/: mod.rs  neg_f16in.rs  neg_f32in.rs  neg_f64in.rs  neg_i128in.rs  neg_i16in.rs  neg_i32in.rs  neg_i64in.rs
rust/src/instructions/math/pow/: mod.rs  pow_i128in.rs  pow_i16in.rs  pow_i32in.rs  pow_i64in.rs
rust/src/instructions/math/powf/: mod.rs  powf_f16in.rs  powf_f32in.rs  powf_f64in.rs
rust/src/instructions/math/powi/: mod.rs  powi_f16in.rs  powi_f32in.rs  powi_f64in.rs
rust/src/instructions/math/rol/: mod.rs  rol_i128in.rs  rol_i16in.rs  rol_i32in.rs  rol_i64in.rs
rust/src/instructions/metadata/: length_func.rs  mod.rs  typeof_func.rs
rust/src/instructions/stack/: concat_func.rs  dup_func.rs  get_func.rs  import_func.rs  mod.rs  push_array_func.rs  push_f16_func.rs  push_f32_func.rs  push_f64_func.rs  push_func.rs  push_i128_func.rs  push_i16_func.rs  push_i32_func.rs  push_i64_func.rs  push_object_func.rs  push_string_func.rs  set_func.rs  swap_func.rs  truncate_func.rs  val_func.rs
rust/src/interfaces/: interface.rs  mod.rs  napi_interface.rs  native_interface.rs  wasm_interface.rs
rust/src/optimizer/: analyze_usage.rs  eliminate_dead_loops.rs  eliminate_dead_stores.rs  eliminate_redundant_loads.rs  fold_constants.rs  fold_conversions.rs  is_pure_loop.rs  jump_threading.rs  mod.rs  optimize_bytecode.rs  optimizer_bytecode.rs  strength_reduction.rs
rust/src/traits/: json_value_trait.rs  mod.rs  vmevent_trait.rs
rust/src/types/: capability.rs  control_flow_signal.rs  error_options.rs  instructions.rs  js_error_options.rs  js_runtime_config.rs  mod.rs  primitive_types.rs  runtime_config.rs  stack.rs  usage.rs  value.rs  var_stack.rs  vmconfig.rs  vmevent.rs  vmresult.rs  vmstate.rs  wasm_error_options.rs  wasm_runtime_config.rs
rust/src/utils/: compute_hot_threshold.rs  fast_format.rs  filtered_writer.rs  format_output.rs  has_nightly_opcodes.rs  loader.rs  map_primitive.rs  marker_formatter.rs  mod.rs  resolve_symbols.rs  type_binding.rs  vmerror.rs
rust/src/utils/vmerror/: colors.rs  config.rs  display.rs  error.rs  get_backtrace.rs  hints.rs  mod.rs
rust/src/vm/: execute.rs  generate.rs  inject_args.rs  mod.rs  prepare_vm.rs  run.rs  validate_bytecode.rs  validate_vars.rs
rust/src/vm/dispatch/: collections_dispatch.rs  comparison_dispatch.rs  control_flow_dispatch.rs  conversions_dispatch.rs  io_dispatch.rs  logic_dispatch.rs  math_dispatch.rs  metadata_dispatch.rs  mod.rs  stack_dispatch.rs
tests/benchmark/rust/: Cargo.toml  synclean.toml
tests/benchmark/rust/benches/: add_bench.rs  mod.rs
(+337 files in other folders)
