[package]
name = "lightvm"
version = "0.1.0-alpha.8-nightly.20260711.76d5176"
authors = ["SoTeen Studio <soteenstudio@gmail.com>"]
edition = "2024"
description = "A capability-based virtual machine designed for secure, predictable, and optimized bytecode execution."
license = "Apache-2.0"
repository = "https://github.com/soteenstudio/lightvm"
readme = "README.md"
exclude = [
  ".github/**/*",
  ".solas/**/*",
  "ts/**",
  "rust/benches/**/*",
  "node_modules/**/*",
  "scripts/**/*",
  "types/**/*",
  "docs/**/*",
  ".*",
  "*.js",
  "*.md",
  "*.toml",
  "*.json",
  ".cargo_vcs_info.json",
  "Cargo.toml.orig",
  "!README.md",
  "!Cargo.toml"
]

[lib]
name = "lightvm"
path = "rust/src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["native"]
node = ["napi", "napi-derive"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]
native = []

# Normal Benches
[[bench]]
name = "add_bench"
path = "rust/benches/normal/add_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "assign_bench"
path = "rust/benches/normal/assign_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "concat_bench"
path = "rust/benches/normal/concat_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "dead_code_bench"
path = "rust/benches/normal/dead_code_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "io_bench"
path = "rust/benches/normal/io_bench.rs"
harness = false
required-features = ["native"]

# Optimize Benches
[[bench]]
name = "add_bench_optimize"
path = "rust/benches/optimize/add_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "assign_bench_optimize"
path = "rust/benches/optimize/assign_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "concat_bench_optimize"
path = "rust/benches/optimize/concat_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "dead_code_bench_optimize"
path = "rust/benches/optimize/dead_code_bench.rs"
harness = false
required-features = ["native"]

[[bench]]
name = "io_bench_optimize"
path = "rust/benches/optimize/io_bench.rs"
harness = false
required-features = ["native"]

[dependencies]
napi = { version = "3.9", features = ["napi4", "serde", "serde-json"], optional = true } 
napi-derive = { version = "3.5", optional = true }
colored = "3"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
itoa = "1.0"
ryu = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
half = { version = "2.7.1", features = ["num-traits", "serde", "std"] }
num-traits = "0.2"
unescape = "0.1"
smallvec = "1.15.1"
ts-rs = { version = "12.0", features = ["serde_json"] }
wasm-bindgen = { version = "0.2.122", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3.100", optional = true }
backtrace = "0.3.76"

[dev-dependencies]
criterion = "0.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ahash = { version = "0.8", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ahash = { version = "0.8", default-features = false, features = ["serde", "no-rng", "std"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
overflow-checks = false
debug = false
rpath = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
incremental = false
split-debuginfo = "off"
debug = false

[profile.bench]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
overflow-checks = false
debug = false
rpath = false
