[package]
name = "lightvm_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", features = ["napi4", "serde", "serde-json"] } 
napi-derive = "2.16"
colored = "2"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itoa = "1.0"
ryu = "1.0"
smol_str = { version = "0.2", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
overflow-checks = false
debug = false        # Mastiin gak ada metadata sampah
rpath = false        # Matiin dynamic library search path (buat startup lebih cepet)
