[package]
name = "lightvm"
version = "0.1.0-alpha.0"
authors = ["SoTeen Studio <soteenstudio@gmail.com>"]
edition = "2021"
description = "mx"
license = "Apache-2.0"
repository = "https://github.com/soteenstudio/lightvm"
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["native"]
node = ["napi", "napi-derive"]
native = []

[dependencies]
napi = { version = "2.16", features = ["napi4", "serde", "serde-json"], optional = true } 
napi-derive = { version = "2.16", optional = true }
colored = "3"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
itoa = "1.0"
ryu = "1.0"
smol_str = { version = "0.2", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }
half = { version = "2.3", features = ["num-traits", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
overflow-checks = false
debug = false        # Mastiin gak ada metadata sampah
rpath = false        # Matiin dynamic library search path (buat startup lebih cepet)
