[package]
name = "lightvm"
version = "0.2.0-alpha.5"
authors = ["SoTeen Studio <soteenstudio@gmail.com>"]
edition = "2021"
description = "A capability-based virtual machine designed for secure, predictable, and optimized bytecode execution."
license = "Apache-2.0"
repository = "https://github.com/soteenstudio/lightvm"
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["native"]
node = ["napi", "napi-derive"]
native = []

[dependencies]
napi = { version = "3.9", features = ["napi4", "serde", "serde-json"], optional = true } 
napi-derive = { version = "3.5", optional = true }
colored = "2"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
itoa = "1.0"
ryu = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }
half = { version = "2.7.1", features = ["num-traits", "serde", "std"] }
num-traits = "0.2"
unescape = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
overflow-checks = false
debug = false
rpath = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
incremental = false
split-debuginfo = "off"
debug = false
