[package]
name = "lightvm_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
lightvm = { path = "../../../rust" }
serde_json = "1.0"
criterion = "0.5"

[[bench]]
name = "add_bench"
harness = false

[[bench]]
name = "assign_bench"
harness = false

[[bench]]
name = "concat_bench"
harness = false

[[bench]]
name = "dead_code_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false
